tests/fail/21_unary_minus_str.lang
функция Начало(): целое {
  // Семантический анализатор должен выдать ошибку:
  // "Оператор '-' применим только к числам"
  пост строка s = -"привет";
  вернуть 0;
}
